--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          大家好 我的博客开通了，希望我能写出好的博客给大家浏览，也望大家批评指正。希望我能不忘初心地一直坚持下去，也希望在这段旅途中能找到志同道合的小伙伴们。
+          大家好 我的博客开通了，希望我能写出好的博客给大家浏览.
         </div>
           <a href="/posts/%E5%BC%80%E5%8D%9A%E5%A4%A7%E5%90%89/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
